# AutoMatLab

./: .gitignore  Dockerfile  LICENSE  Makefile  PROJECT_REPORT.md  QUICKSTART.md  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: streamlit_app.py
app/pages/: 1_Run_Explorer.py  2_Candidates.py  3_Diagnostics.py  __init__.py
configs/: default.yaml
data/: sample.csv
scripts/: download_data.py  run_experiment.py
src/automatlabs/: __init__.py  acquisition.py  baselines.py  config.py  data.py  evaluation.py  features.py  loop.py  models.py  oracle.py  run.py  utils.py
tests/: __init__.py  test_acquisition.py  test_features.py  test_oracle.py
